# authzed-rust-sample

./: Cargo.toml
src/: lib.rs
