[package]
edition = "2021"
name = "authzed-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
prost-types = "0.11.6"
tonic = "0.8.3"
tower = "0.4.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
glob = "0.3.0"
tonic-build = "0.8.4"

[features]
client = []
default = ["client", "v1"]
server = []
v0 = []
v1 = []
v1alpha1 = []

[[bin]]
name = "authzed-client"
path = "src/lib.rs"
